name:                fs-stats
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hexresearch/fs-stats#readme
license:             BSD3
license-file:        LICENSE
author:              HEX Research
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Stat.Fs
  build-depends:       base >= 4.7 && < 5
                     , Boolean
                     , bytestring
                     , immortal
                     , scientific
                     , shelly
                     , stm
                     , text
                     , time
                     , yaml
                     , unbounded-delays
  default-language:    Haskell2010
  default-extensions:
    DeriveDataTypeable
    DeriveGeneric
    OverloadedStrings

test-suite fs-stats-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fs-stats
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hexresearch/fs-stats
