name:                fs-stats
version:             0.1.0.0
synopsis:            Library for saving Key-value metrics to YAML-file
-- description:
homepage:            https://github.com/hexresearch/fs-stats#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              HEX Research
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Stat.Fs
                       Data.Stat.Fs.Kv
                       Data.Stat.Fs.Ref
                       Data.Stat.Fs.PrimVal
  build-depends:       base >= 4.7 && < 5
                     , Boolean
                     , bytestring
                     , containers
                     , filepath
                     , immortal
                     , scientific
                     , shelly
                     , stm
                     , temporary
                     , text
                     , time
                     , yaml
                     , unbounded-delays
  default-language:    Haskell2010
  default-extensions:
    DeriveDataTypeable
    DeriveGeneric
    FlexibleInstances
    OverloadedStrings
    TypeSynonymInstances

test-suite fs-stats-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fs-stats
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hexresearch/fs-stats
